force-app/main/default/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_Salary__c</fullName>
        <label>Approximate Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Class_Level_Degree_Level__c</fullName>
        <label>Class Level / Degree Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the job application require cover letter or not</description>
        <label>Cover Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Desired_Majors__c</fullName>
        <label>Desired Major(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Skills__c</fullName>
        <label>Desired Skills</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position_Type__c</fullName>
        <label>Position Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time Entry Level</fullName>
                </value>
                <value>
                    <fullName>Full Time Experienced</fullName>
                </value>
                <value>
                    <fullName>Internship (Paid)</fullName>
                </value>
                <value>
                    <fullName>Internship (unpaid)</fullName>
                </value>
                <value>
                    <fullName>On-Campus Non-work study (student enployment)</fullName>
                </value>
                <value>
                    <fullName>On-Campus work study (student enployment)</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Fellowship</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recruiting_Company__c</fullName>
        <label>Recruiting Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Work_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Work Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <description>This field will not store data in the record, it is only used to store data in memory temporarily to send them to front end.</description>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unofficial_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the job application require unofficial transcript or not</description>
        <label>Unofficial Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Hours_Per_Week__c</fullName>
        <label>Work Hours Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Recruiting_Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>